# ChangeLog for sys-fs/e2fsprogs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.183 2009/03/17 10:23:45 armin76 Exp $

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> e2fsprogs-1.41.3-r1.ebuild:
  alpha stable

  14 Feb 2009; Raúl Porcel <armin76@gentoo.org> e2fsprogs-1.41.3-r1.ebuild:
  arm/ia64/s390/sh/sparc/x86 stable wrt #258527

  14 Feb 2009; Jeremy Olexa <darkside@gentoo.org>
  e2fsprogs-1.41.3-r1.ebuild:
  amd64 stable, bug 258527

  12 Feb 2009; Brent Baude <ranger@gentoo.org> e2fsprogs-1.41.3-r1.ebuild:
  stable ppc64, bug 258527

  12 Feb 2009; nixnut <nixnut@gentoo.org> e2fsprogs-1.41.3-r1.ebuild:
  ppc stable #258527

  11 Feb 2009; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Stable on alpha, bug #258527

  11 Feb 2009; Jeroen Roovers <jer@gentoo.org> e2fsprogs-1.41.3-r1.ebuild:
  Stable for HPPA (bug #258527).

*e2fsprogs-1.41.4 (28 Jan 2009)

  28 Jan 2009; Mike Frysinger <vapier@gentoo.org> +e2fsprogs-1.41.4.ebuild:
  Version bump.

*e2fsprogs-1.41.3-r1 (04 Jan 2009)

  04 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  +files/e2fsprogs-1.41.3-tune2fs-opt.patch, +e2fsprogs-1.41.3-r1.ebuild:
  Add fix from upstream for slow tune2fs usage #253162 by candrews.

  01 Jan 2009; Guy Martin <gmsoft@gentoo.org> e2fsprogs-1.41.3.ebuild:
  hppa stable, #251808

  30 Dec 2008; Mike Frysinger <vapier@gentoo.org> e2fsprogs-1.41.3.ebuild:
  Create temp /etc/mtab for random test failures #217719.

  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  e2fsprogs-1.41.3.ebuild:
  ppc stable, bug #251808

  29 Dec 2008; Brent Baude <ranger@gentoo.org> e2fsprogs-1.41.3.ebuild:
  Marking e2fsprogs-1.41.3 ppc64 for bug 251808

  29 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  e2fsprogs-1.41.3.ebuild:
  Stable on sparc, bug #251808

  27 Dec 2008; Jeremy Olexa <darkside@gentoo.org> e2fsprogs-1.41.3.ebuild:
  amd64 stable, bug 251808
