@@ -19,6 +19,6 @@ EBUILD e2fsprogs-1.40.11.ebuild 4193 RMD160 f7fe29b021364c0851b5e8612a2d39edc875
 EBUILD e2fsprogs-1.40.9.ebuild 4090 RMD160 1d772fd802623575d833ad29c9a9cc07c6ea2a1c SHA1 894b940389d0717fc1b71d107bac046b5a1cd14a SHA256 0e0bc50ae354c6f6e36f393a4734645022cb76a90d4963b6f7938c360f0db96a
 EBUILD e2fsprogs-1.41.3-r1.ebuild 3657 RMD160 5a3b89c49f35f7ec989109995dbcc0ec58c0d4b5 SHA1 b3950d74521647c63f3d9770cc519d6059b2cc5a SHA256 fa4c06e7ace119a03286c008866fe6996e0e27f37218b53ccf19f9d04f6435bb
 EBUILD e2fsprogs-1.41.3.ebuild 3601 RMD160 d56c465369a7ad07015a82be3079de69438cf961 SHA1 dff7d0afef696deff67e4adfffc0b105f40d8078 SHA256 481d84e456d6f41499bce89cd423cf0545ed80737e76f12d83f816f1c87184a2
-EBUILD e2fsprogs-1.41.4.ebuild 4296 RMD160 75982629fcb7a2ea3cd8fa75ca9fc70942e54a85 SHA1 86f2b6f52cb283ea501ea52ddda6833c15d25231 SHA256 86b89208b255912149c28e18f3a51948079a5f56c73ae6812914e49c14a6dc02
-MISC ChangeLog 27132 RMD160 96730ce18c13239db704bf651b334506438db9af SHA1 74915a92a105196695e3007d45b8973f6721ee6a SHA256 a7fa1acdeeeaeaf9360c0008d4d780b1b2ebf4a0cc388b66addca6b9a17f1cd7
+EBUILD e2fsprogs-1.41.4.ebuild 4254 RMD160 5a62b92877e6a8957db2383090225cee88ffde6d SHA1 6246ff5dcd8b183eff03dedbd69032b770938511 SHA256 eb3a22b52fbe8147fb1664e80b382be66cd1485f9cd49c64b78e02778a6f3e59
+MISC ChangeLog 27279 RMD160 f36ac4e0dd58b143b0181ad8c59bc5f5142b1b5e SHA1 8199a2fc6c9d61991e634f241047f51865c456c1 SHA256 773d75874ef2a31c9320bd06f08af9dfb38cc1a7a6d5795ba0c67619f369084e
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
