@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/e2fsprogs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.183 2009/03/17 10:23:45 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.184 2009/04/05 03:15:53 vapier Exp $
+
+  05 Apr 2009; Mike Frysinger <vapier@gentoo.org> e2fsprogs-1.41.4.ebuild:
+  Move LDCONFIG/STRIP disabling to src_install #264469 by Nick Fortino.
 
   17 Mar 2009; Raúl Porcel <armin76@gentoo.org> e2fsprogs-1.41.3-r1.ebuild:
   alpha stable
